# LAMMPS_Scripts_Public

./: LICENSE  LICENSE.txt  setup.cfg
BasicChecks/: checks_isocomp.py  checks_stress_data.py  checks_stress_data_subfigures.py  checks_voidRatio.py  checks_void_data.py
CyclicLoading/: plot_Coord_MechCoord_vs_StepN.py  plot_StrainAmplitude.py
EnergyTracing/: plot_EKr_vs_strain.py  plot_EKt_vs_strain.py  plot_EKtot_vs_cycleNumber_allStress.py  plot_ESn_vs_strain.py  plot_ESt_vs_strain.py  plot_EStot_vs_cycleNumber_allStress.py  plot_Efric_vs_cycleNumber.py  plot_Efric_vs_cycleNumber_allStress.py  plot_Efric_vs_strain.py  plot_Evol_vs_cycleNumber_allStress.py  plot_Evol_vs_strain.py  plot_energyBalance_vs_strain.py  plot_energy_vs_strain.py
Essentials/: cacluate_steps.py  calculateClumpVolume.py  calculate_DumpInterval.py  copyDumpsCyclic.py  get_G0.py  test_merge.py
ExplanatoryFigures/: CSL_StateParameter_Explained.py  EarthPressureDesignCodeExample.py  MohrCircle.py  PSD_Thesis.py  PositionsExplained.py  WindTurbineCapacity.py  plot_q_vs_p_path_K0strainControlled.py  plot_q_vs_p_path_strainControlled.py  stress_path_explained_K0.py  stress_path_explained_strainControlled.py  wall_velocity_K0.py  wall_velocity_strainControlled.py
MethodologyFigures/: Energy_Balance_vs_astrain_modifiedNewton.py  Error_Eneregy_Balance_Compare.py  MultistressExplained.py  energy_deviatoricstress_mod.py  energy_types_modified.py  plo_deviatoricStress.py  q_vs_epsdev.py  qp_vs_astrain_Newton.py  work_vs_astrain_Newton.py
Molecule/: plot_compare_void_mod.py  plot_stress_strain_loops.py  (+5 more)
(+114 files in other folders)
