[metadata]
name = basicFunctions
version = 1.0.0
author = Tara Sassel
author_email = tara.sassel@gmail.com
description = Basic functions for Granular LAMMPS
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/TaraSassel/LAMMPS_Scripts
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data=True
python_requires = >=3
